--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,8 +1,11 @@
-.button{
- border-radius: 5px;   
- border: 1px solid black;
- cursor: pointer;
- margin-right: 15px;
- background-color: rgb(26, 181, 220);
- padding: 8px;
+.button {
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  margin-right: 15px;
+  background-color: rgb(65, 139, 223);
+  padding: 8px;
+}
+.button:hover {
+  background-color: rgb(237, 237, 111);
 }
